--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html
@@ -1,10 +1,13 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
-  <title>Portada de la Antología de Lógica</title>
-<html>
-<head>
-  <title>BIBLIOTECA DIGITAL</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+  <script src="../../../js/jquery-3.4.1.min.js"></script>
+  <script src="../../../js/bootstrap.min.js"></script>
+  <title>Biografía de Mario Molina</title>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ ESTILO ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <style>
   #section{font-family:Verdana; font-size:12px; font-style:bold; text-align:justify;} 
@@ -16,16 +19,29 @@
 <body BGColor=white>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <div id="titulo">
-   Introito
+  <h1>Mario Molina</h1>
 </div>
 
 <hr color="blue">
 
 <div id="section">
-   El caracter depredador de muchos hombres, motivados por su codicia, esta haciendo un gran daño a muchas de las especies alrededor del mundo y en consecuencia estan en
-   peligro inminente de extinción. Este caracter depredador es una de las causas que estan contribuyendo a la sexta extinción.
+  <div class="row">
+    <div class="col-md-3">
+      <img src="IMAGENES_Biografia_de_Mario_Molina/mario_molina.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
+    </div>
+    <div class="col-sm-9">
+      <p>
+        (Ciudad de México, 1943) Científico mexicano especializado en química atmosférica que investigó los efectos dañinos de los CFC sobre la capa de ozono. 
+        De la trascendencia de sus estudios dan fe la firma en 1987 de un protocolo internacional que prohibió la fabricación de CFC y el premio Nobel de Química 
+        que le fue otorgado en 1995. Mario Molina es, asimismo, una de las figuras más representativas de aquel sector de la comunidad científica comprometido 
+        en causas medioambientales como la lucha contra la contaminación.
+      </p>
+    </div>
+  </div>
+   
    <hr>
-   Hugo Rangel<br>
+   Fuente: <a href="https://www.biografiasyvidas.com/biografia/m/molina.htm">https://www.biografiasyvidas.com/biografia/m/molina.htm</a>
+   <br>
 </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 </body>
