--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
+   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>MENU_Biografia_de_Mario_Molina</title>
    <link rel="stylesheet" href="ITEMS_Biografia_de_Mario_Molina/w3.css">
    <link rel="stylesheet" href="ITEMS_Biografia_de_Mario_Molina/nav.css">
@@ -9,7 +12,7 @@
 <div class="w3-row w3-border">
    <div class="w3-container w3-quarter" style="background: white">
       <div id="nav">
-         <div class="nav_titulo">Biografía de Mario Molina</div>
+         <div class="nav_titulo">BiografÃ­a de Mario Molina</div>
          <ul id="nav_menu">
             <li><a href="#" target="iframe_a">Texto 1</a></li>
             <li><a href="#" target="iframe_a">Texto 2</a></li>
@@ -28,7 +31,7 @@
    <div class="w3-container w3-threequarter" style="background: white;">
       <div style="margin-top: 4px; background: white; width: 100%; height: auto;">
          <div>
-            <iframe src="ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html" width="100%" height="480px" name="iframe_a" frameborder="0" seamless="seamless"></iframe>
+            <iframe src="ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html" width="100%" height="1500px" name="iframe_a" frameborder="0" seamless="seamless"></iframe>
          </div>
       </div>
    </div>
