Mario Molina: Reconocimientos y Premios

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
@@ -16,14 +16,9 @@
          <ul id="nav_menu">
             <li><a href="ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html" target="iframe_a">Introducción</a></li>
             <li><a href="#" target="iframe_a">Texto 2</a></li>
-            <li><a href="#" target="iframe_a">Texto 3</a></li>
+            <li><a href="ITEMS_Biografia_de_Mario_Molina/RECONOCIMIENTOS_Biografia_de_Mario_Molina.html" target="iframe_a">Reconocimientos y premios</a></li>
             <li><a href="#" target="iframe_a">Texto 4</a></li>
             <li><a href="#" target="iframe_a">Texto 5</a></li>
-            <li><a href="#" target="iframe_a">Texto 6</a></li>
-            <li><a href="#" target="iframe_a">Texto 7</a></li>
-            <li><a href="#" target="iframe_a">Texto 8</a></li>
-            <li><a href="#" target="iframe_a">Texto 9</a></li>
-            <li><a href="#" target="iframe_a">Texto 10</a></li>
          </ul>
          <br>
       </div>
