Mario Molina: Doctorados y artículo de clorofluormetanos

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
@@ -17,8 +17,9 @@
             <li><a href="ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html" target="iframe_a">Introducción</a></li>
             <li><a href="#" target="iframe_a">Texto 2</a></li>
             <li><a href="ITEMS_Biografia_de_Mario_Molina/RECONOCIMIENTOS_Biografia_de_Mario_Molina.html" target="iframe_a">Reconocimientos y premios</a></li>
-            <li><a href="#" target="iframe_a">Texto 4</a></li>
-            <li><a href="#" target="iframe_a">Texto 5</a></li>
+            <li><a href="ITEMS_Biografia_de_Mario_Molina/DOCTORADOS_Biografia_de_Mario_Molina.html" target="iframe_a">Doctorados Honoris Causa</a></li>
+            <li><a href="ITEMS_Biografia_de_Mario_Molina/249810a0.pdf" target="iframe_a">Artículo: Stratospheric sink for chlorofluoromethanes :
+                  chlorine atomc-atalysed destruction of ozone</a></li>
          </ul>
          <br>
       </div>
