--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/ITEMS_Biografia_de_Mario_Molina/RECONOCIMIENTOS_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/ITEMS_Biografia_de_Mario_Molina/RECONOCIMIENTOS_Biografia_de_Mario_Molina.html
@@ -29,7 +29,7 @@
     <div class="col-sm-12">
         <ul>
             <li>Premio Tyler para Logro Ambiental (1983)</li>
-            <li>Premio John Gustavus Esseler de la Sección Noreste de la Sociedad Estadounidense de Química (1987)1</li>
+            <li>Premio John Gustavus Esseler de la Sección Noreste de la Sociedad Estadounidense de Química (1987)</li>
             <li>NASA Exceptional Scientific Achievement Medal (1989)</li>
             <li>Premio Nobel de Química (1995)</li>
             <li>Medalla Willard Gibbs de la Sección Chicago de la Sociedad Estadounidense de Química (1998)</li>
