Agrego biografía de Mario Molina

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
@@ -8,14 +8,14 @@
    <link rel="stylesheet" href="ITEMS_Biografia_de_Mario_Molina/w3.css">
    <link rel="stylesheet" href="ITEMS_Biografia_de_Mario_Molina/nav.css">
 </head>
-<body bgcolor="white">
+<body style="background:white">
 <div class="w3-row w3-border">
    <div class="w3-container w3-quarter" style="background: white">
       <div id="nav">
          <div class="nav_titulo">Biografía de Mario Molina</div>
          <ul id="nav_menu">
             <li><a href="ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html" target="iframe_a">Introducción</a></li>
-            <li><a href="#" target="iframe_a">Texto 2</a></li>
+            <li><a href="ITEMS_Biografia_de_Mario_Molina/BIO_Biografia_de_Mario_Molina.html" target="iframe_a">Biografía</a></li>
             <li><a href="ITEMS_Biografia_de_Mario_Molina/RECONOCIMIENTOS_Biografia_de_Mario_Molina.html" target="iframe_a">Reconocimientos y premios</a></li>
             <li><a href="ITEMS_Biografia_de_Mario_Molina/DOCTORADOS_Biografia_de_Mario_Molina.html" target="iframe_a">Doctorados Honoris Causa</a></li>
             <li><a href="ITEMS_Biografia_de_Mario_Molina/249810a0.pdf" target="iframe_a">Artículo: Stratospheric sink for chlorofluoromethanes :
