--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html
@@ -26,7 +26,7 @@
 
 <div id="section">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="IMAGENES_Biografia_de_Mario_Molina/mario_molina.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
     </div>
     <div class="col-sm-9">
