Extinciones masivas. Introducción

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
+   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>MENU_Sexta_Extincion</title>
    <link rel="stylesheet" href="ITEMS_Sexta_Extincion/w3.css">
    <link rel="stylesheet" href="ITEMS_Sexta_Extincion/nav.css">
 </head>
-<body bgcolor="white">
+<body style="background: white;">
 <div class="w3-row w3-border">
    <div class="w3-container w3-quarter">
       <div id="nav">
@@ -13,19 +16,20 @@
             Extinciones masivas
          </div>
          <ul id="nav_menu">
-            <li><a href="#" target="iframe_a">La primera extinci髇</a></li>
-            <li><a href="#" target="iframe_a">La segunda extinci髇</a></li>
-            <li><a href="#" target="iframe_a">La tercera extinci髇</a></li>
-            <li><a href="#" target="iframe_a">La cuarta extinci髇</a></li>
-            <li><a href="#" target="iframe_a">La quinta extinci髇</a></li>
-            <li><a href="#" target="iframe_a">La sexta extinci髇</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/INTROITO_Sexta_Extincion.html" target="iframe_a">Introducci贸n</a></li>
+            <li><a href="#" target="iframe_a">La primera extinci贸n</a></li>
+            <li><a href="#" target="iframe_a">La segunda extinci贸n</a></li>
+            <li><a href="#" target="iframe_a">La tercera extinci贸n</a></li>
+            <li><a href="#" target="iframe_a">La cuarta extinci贸n</a></li>
+            <li><a href="#" target="iframe_a">La quinta extinci贸n</a></li>
+            <li><a href="#" target="iframe_a">La sexta extinci贸n</a></li>
          </ul>
          <br>
       </div>
    </div>
    <div class="w3-container w3-threequarter" style="background: white;">
       <div style="margin-top: 4px; background: white; width: 100%; height: auto;">
-         <iframe src="ITEMS_Sexta_Extincion/INTROITO_Sexta_Extincion.html" width="100%" height="500px" name="iframe_a" frameborder="0" seamless="seamless"></iframe>
+         <iframe src="ITEMS_Sexta_Extincion/INTROITO_Sexta_Extincion.html" width="100%" height="1500px" name="iframe_a" frameborder="0" seamless="seamless"></iframe>
       </div>
    </div>
 </div>
