--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/INTROITO_Sexta_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/INTROITO_Sexta_Extincion.html
@@ -1,31 +1,51 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
-  <title>Portada de la Antología de Lógica</title>
-<html>
-<head>
-  <title>BIBLIOTECA DIGITAL</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+  <script src="../../../js/jquery-3.4.1.min.js"></script>
+  <script src="../../../js/bootstrap.min.js"></script>
+  <title>Extinciones Masivas</title>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ ESTILO ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <style>
   #section{font-family:Verdana; font-size:12px; font-style:bold; text-align:justify;} 
-  body{padding: 0px; margin: 0px;}
+  body{padding: 0px; margin: 0px; background: white;}
   #titulo{font-family: palatino linotype; font-size:18px; padding:2px; width:250px; text-align:left;}
 </style>
 </head>
 
-<body BGColor=white>
+<body>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <div id="titulo">
-   Introito
+  Introducción
 </div>
 
 <hr color="blue">
 
-<div id="section">
-   El caracter depredador de muchos hombres, motivados por su codicia, esta haciendo un gran daño a muchas de las especies alrededor del mundo y en consecuencia estan en
-   peligro inminente de extinción. Este caracter depredador es una de las causas que estan contribuyendo a la sexta extinción.
-   <hr>
-   Hugo Rangel<br>
+<div class="row">
+  <div class="col-sm-9">
+    <p>
+      Una extinción masiva es un tipo de extinción terminal en la cual desaparecen sin descendencia un 10 % o más de las especies a lo largo de un año,
+      o bien un 50 % o más de las especies en un periodo comprendido entre uno y tres millones y medio de años, cuando en momentos normales las extinciones 
+      se producen a un ritmo de entre dos y cinco familias biológicas de invertebrados marinos y vertebrados cada millón de años. Desde que la vida empezó
+      en la Tierra se han detectado cinco sucesos en el eón Fanerozoico tras los cuales se han extinguido más de las mitad de las especies existentes.
+    </p>
+    <p>
+      En ocasiones las extinciones masivas se confunden con un evento ligado a la extinción,​ del inglés Extinction-Level Event o ELE, que sería el suceso, 
+      más o menos largo, provocador de dichas extinciones. Estos eventos son generalmente desconocidos, pero existen evidencias de colisiones con meteoritos 
+      de varios kilómetros, erupciones volcánicas masivas, supernovas cercanas, las acciones de una o más nuevas especies, combinaciones de las anteriores, etc. 
+      Del mismo modo, está bajo discusión si en el Holoceno vivimos la sexta gran extinción y si el surgimiento de las bacterias eucariotas y la exterminación de 
+      muchas bacterias procariotas por la expulsión de oxígeno pudo ser la primera y la desaparición de la Fauna de Ediacara otra más.
+    </p>
+    <hr>
+    
+    Fuente: <a href="https://es.wikipedia.org/wiki/Extinción_masiva"> https://es.wikipedia.org/wiki/Extinción_masiva</a>
+  </div>
+  <div class="col-sm-3">
+    <img src="IMAGENES_Sexta_Extincion/yelmo.jpg" class="img-fluid rounded-circle" alt="Yelmo">
+  </div>
 </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 </body>
