Tabla de extinciones.

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
@@ -17,7 +17,8 @@
          </div>
          <ul id="nav_menu">
             <li><a href="ITEMS_Sexta_Extincion/INTROITO_Sexta_Extincion.html" target="iframe_a">Introducción</a></li>
-            <li><a href="#" target="iframe_a">La primera extinción</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/TABLA_Extincion.html" target="iframe_a">Tabla de Extinciones</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/PRIMERA_Extincion.html" target="iframe_a">La primera extinción</a></li>
             <li><a href="#" target="iframe_a">La segunda extinción</a></li>
             <li><a href="#" target="iframe_a">La tercera extinción</a></li>
             <li><a href="#" target="iframe_a">La cuarta extinción</a></li>
