--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
@@ -19,11 +19,12 @@
             <li><a href="ITEMS_Sexta_Extincion/INTROITO_Sexta_Extincion.html" target="iframe_a">Introducción</a></li>
             <li><a href="ITEMS_Sexta_Extincion/TABLA_Extincion.html" target="iframe_a">Tabla de Extinciones</a></li>
             <li><a href="ITEMS_Sexta_Extincion/PRIMERA_Extincion.html" target="iframe_a">La primera extinción</a></li>
-            <li><a href="#" target="iframe_a">La segunda extinción</a></li>
-            <li><a href="#" target="iframe_a">La tercera extinción</a></li>
-            <li><a href="#" target="iframe_a">La cuarta extinción</a></li>
-            <li><a href="#" target="iframe_a">La quinta extinción</a></li>
-            <li><a href="#" target="iframe_a">La sexta extinción</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/SEGUNDA_Extincion.html" target="iframe_a">La segunda extinción</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/TERCERA_Extincion.html" target="iframe_a">La tercera extinción</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/CUARTA_Extincion.html" target="iframe_a">La cuarta extinción</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/QUINTA_Extincion.html" target="iframe_a">La quinta extinción</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/SEXTA_Extincion.html" target="iframe_a">La sexta extinción</a></li>
+            <li><a href="ITEMS_Sexta_Extincion/Biodivesidad_combatir_la_sexta_extincion_masiva_B._No.pdf" target="iframe_a">Artículo: Biodiversidad: combatir la sexta extinción masiva</a></li>
          </ul>
          <br>
       </div>
