Biografía Mario Molina. Agrego otro artículo.

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
@@ -18,8 +18,12 @@
             <li><a href="ITEMS_Biografia_de_Mario_Molina/BIO_Biografia_de_Mario_Molina.html" target="iframe_a">Biografía</a></li>
             <li><a href="ITEMS_Biografia_de_Mario_Molina/RECONOCIMIENTOS_Biografia_de_Mario_Molina.html" target="iframe_a">Reconocimientos y premios</a></li>
             <li><a href="ITEMS_Biografia_de_Mario_Molina/DOCTORADOS_Biografia_de_Mario_Molina.html" target="iframe_a">Doctorados Honoris Causa</a></li>
-            <li><a href="ITEMS_Biografia_de_Mario_Molina/249810a0.pdf" target="iframe_a">Artículo: Stratospheric sink for chlorofluoromethanes :
-                  chlorine atomc-atalysed destruction of ozone</a></li>
+            <div class="nav_titulo">
+               Artículos
+            </div>
+            <li><a href="ITEMS_Biografia_de_Mario_Molina/249810a0.pdf" target="iframe_a">Stratospheric sink for chlorofluoromethanes: chlorine atomc-atalysed destruction of ozone</a></li>
+            <li><a href="ITEMS_Biografia_de_Mario_Molina/Resumen-ejecutivo-EDUACACION_2018.pdf" target="iframe_a">Implementación a gran escala del proyecto de educación en cambio
+               climático a nivel básico y medio superior</a></li>
          </ul>
          <br>
       </div>
