Cambio la codificación de la página QUE_es

--- a/antologia/ITEMS_Polucion_Global/QUE_es.html
+++ b/antologia/ITEMS_Polucion_Global/QUE_es.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
-    <title>Que es una antologia digital</title>
+   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Que es una antolog√≠a digital</title>
 <style>
     .ctndor {
       width: 70%;
@@ -33,55 +36,77 @@
 <body>
     <div class="ctndor">
         <div id="titulo">
-            øQue es una antolog&iacute;a digital?
+            ¬øQue es una antolog√≠a digital?
         </div>
         <div class="parrafo">
-            La acepciÛn com˙n de una antologÌa, <i>en firme, es decir, un impreso</i>, en los diccionarios es ìcolecciÛn de textos escogidos sobre un tema especÌficoî, esta definiciÛn, aunque escueta, es lo suficientemente abierta para nuestros propÛsitos, ya que nos abre un amplio abanico de posibilidades para la elaboraciÛn de una antologÌa digital adecuada a nuestras necesidades acadÈmicas y a˙n laborales.
+            La acepci√≥n com√∫n de una antolog√≠a, <i>en firme, es decir, un impreso</i>, en los diccionarios es "colecci√≥n de textos escogidos 
+            sobre un tema espec√≠fico", esta definici√≥n, aunque escueta, es lo suficientemente abierta para nuestros prop√≥sitos, ya que nos 
+            abre un amplio abanico de posibilidades para la elaboraci√≥n de una antolog√≠a digital adecuada a nuestras necesidades acad√©micas 
+            y a√∫n laborales.
         </div>
         <div class="parrafo sangria">
-            Una antolog&iacute;a en firme es un documento est·tico, ya que este, debido a su naturaleza impresa, no puede actualizarse continuamente y de hacerlo su costo ser&iacute;a elevado. Una posible alternativa a la antologÌa en firme (tradicional) es la antologÌa digital. Esta tiene la posibilidad de actualizarse rapidamente a bajo costo.
+            Una antolog√≠a en firme es un documento est√°tico, ya que este, debido a su naturaleza impresa, no puede actualizarse continuamente 
+            y de hacerlo su costo ser√≠a elevado. Una posible alternativa a la antolog√©a en firme (tradicional) es la antolog√≠a digital. 
+            Esta tiene la posibilidad de actualizarse rapidamente a bajo costo.
         </div>
 
         <div class="parrafo sangria">
-            Una antologÌa digital es un documento din·mico que demanda el desarollo de habilidades escenciales: estrategias de lectura y escritura, de reflexiÛn, de an·lisis y de 	argumentaciÛn. Es ˙til para elaborar otros  documentos: ensayos, monografÌas, divulgaciÛn, libros, etc. AquÌ no se pretende presentar una metodologÌa para elaborar una antologÌa exitosa, ya que no existe tal modelo. Son, de hecho, reglas heurÌsticas basadas en la experiencia al elaborar la presente antologÌa.
+            Una antolog√≠a digital es un documento din√°mico que demanda el desarollo de habilidades escenciales: estrategias de lectura y 
+            escritura, de reflexi√≥n, de an√°lisis y de 	argumentaci√≥n. Es √∫til para elaborar otros  documentos: ensayos, monograf√≠as, 
+            divulgaci√≥n, libros, etc. Aqu√≠ no se pretende presentar una metodolog√≠a para elaborar una antolog√≠a exitosa, ya que no 
+            existe tal modelo. Son, de hecho, reglas heur√≠sticas basadas en la experiencia al elaborar la presente antolog√≠a.
         </div>
         <div class="parrafo" style="margin-left: 18px">
             <ul>
-                <li>Elegir un tema de interÈs com˙n a todos los participantes</li>
-                <li>Elaborar el Ìndice de contenido pertinente></li>
-                <li>Colectar el material correspondiente, sea vÌa internet, lo m·s frecuente, y/o recurrir a otros medios: libros eF, artÌculos, CDs y otros</li>
-                <li>Luego de una lectura crÌtica, seleccionar y ubicar los diferentes textos en el Ìndice de contenido correspondiente</li>
-                <li>Elaborar la p·gina intoductoria de todo el documento</li>
-                <li>Elaborar el prÛlogo con el propÛsito de proporcionar una breve visiÛn de cada capÌtulo o unidad</li>
-                <li>Elaborar la p·gina de semblanza sobre el tema que trata la antologÌa</li>
-                <li>Elaborar las introducciones de cada unidad o capÌtulo</li>
+                <li>Elegir un tema de inter√©s com√∫n a todos los participantes</li>
+                <li>Elaborar el √≠ndice de contenido pertinente></li>
+                <li>Colectar el material correspondiente, sea v√≠a internet, lo m√°s frecuente, y/o recurrir a otros medios: libros eF, art√≠culos, CDs y otros</li>
+                <li>Luego de una lectura cr√≠tica, seleccionar y ubicar los diferentes textos en el √≠ndice de contenido correspondiente</li>
+                <li>Elaborar la p√°gina intoductoria de todo el documento</li>
+                <li>Elaborar el pr√≥logo con el prop√≥sito de proporcionar una breve visi√≥n de cada cap√≠tulo o unidad</li>
+                <li>Elaborar la p√°gina de semblanza sobre el tema que trata la antolog√≠a</li>
+                <li>Elaborar las introducciones de cada unidad o cap√≠tulo</li>
                 <li>Elaborar las conclusiones</li>
             </ul>
         </div>
         <div class="parrafo sangria">
-            En la elaboraci&oacute;n de una antolog&iacute;a digital, como la presente, se persiguen las siguientes metas:
+            En la elaboraci√≥n de una antolog√≠a digital, como la presente, se persiguen las siguientes metas:
         </div>
         <div class="parrafo">
             <blockquote>
-                <i>Primero</i>, considerarla como una instrumento digital din&aacute;mico especializado. La clasificaci&oacute;n de su contenido, en diversos niveles, y la elaboraci&oacute;n e integraciÛn de las reflexiones necesarias y suficientes y la posibilidad de actualizaciÛn permanente a bajo costo la convierten en un instrumento valioso para diversas actividades.
+                <i>Primero</i>, considerarla como una instrumento digital din√°mico especializado. La clasificaci√≥n de su contenido, en diversos niveles, y 
+                la elaboraci√≥n e integraciÔøΩn de las reflexiones necesarias y suficientes y la posibilidad de actualizaci√≥n permanente a bajo costo la
+                 convierten en un instrumento valioso para diversas actividades.
                 <br><br>
-                <i>Segundo</i>, que sea un instrumento que facilite la elaboraci&oacute;n de proyectos como ensayos, monograf&iacute;as, art&iacute;culos de divulgaciÛn, de investigaci&oacute;n y desarrollo realizados, libros, textos, material did&aacute;ctico, tesis y otros.
+                <i>Segundo</i>, que sea un instrumento que facilite la elaboraci√≥n de proyectos como ensayos, monograf√≠as, art√≠culos de divulgaci√≥n, 
+                de investigaci√≥n y desarrollo realizados, libros, textos, material did√°ctico, tesis y otros.
                 <br><br>
-                <i>Tercero</i>, los productos de este proyecto pueden utilizase para elaborar el material did·ctico correspondiente para cursos, clases, talleres, diplomados, etc.
+                <i>Tercero</i>, los productos de este proyecto pueden utilizase para elaborar el material did√°ctico correspondiente para cursos, 
+                clases, talleres, diplomados, etc.
                 <br><br>
-                <i>Cuarto</i>, contribuir, en la medida de lo posible, a combatir el analfabetismo funcional: personas que no comprenden lo que leen y no saben expresarse (comunicarse) mediante la palabra escrita, es tÌpico de estas personas que lean poco o nada y mucho menos escriban. Este mal est· tan extendido que podemos afirmar que es ya una 	plaga conocida hoy dÌa como analfabetismo funcional. Una conducta competente en la lectura y la escritura son determinantes en el aprendizaje. Una iniciativa de <i>alfabetizaci&oacute;n acadÈmica</i>, en las instituciones de educaci&oacute;n superior, demanda la elaboraci&oacute;n de no solo antolog&iacute;as, sino tambiÈn de ensayos y monograf&iacute;as, al menos, tanto de aprendientes como de docentes.
+                <i>Cuarto</i>, contribuir, en la medida de lo posible, a combatir el analfabetismo funcional: personas que no comprenden lo que 
+                leen y no saben expresarse (comunicarse) mediante la palabra escrita, es t√≠pico de estas personas que lean poco o nada y mucho
+                menos escriban. Este mal est√° tan extendido que podemos afirmar que es ya una plaga conocida hoy d√≠a como analfabetismo funcional. 
+                Una conducta competente en la lectura y la escritura son determinantes en el aprendizaje. Una iniciativa de <i>alfabetizaci√≥n 
+                acad√©mica</i>, en las instituciones de educaci√≥n superior, demanda la elaboraci√≥n de no solo antolog√≠as, sino tambi√©n de 
+                ensayos y monograf√≠as, al menos, tanto de aprendientes como de docentes.
             </blockquote>
         </div>
         <div class="parrafo sangria">
-            No existen ìrecetas de cocinaî para la elaboraci&oacute;n de una antolog&iacute;a
-            exitosa, sea en firme o digital, su elaboraci&oacute;n demanda del desarrollo de estrategias de lectura y escritura, de an&aacute;lisis, de reflexi&oacute;n y de argumentaciÛn. Por lo que la elaboraci&oacute;n de una antolog&iacute;a requiere de un gran esfuerzo intelectual, siempre ser· un trabajo arduo a˙n con experiencia. La lectura y la escritura tienen especificidades en cada campo del conocimiento. No es lo mismo elaborar una antolog&iacute;a sobre econom&iacute;a y otra sobre cultura, sus autores deben desarrollar las habilidades pertinenetes.
+            No existen "recetas de cocina" para la elaboraci√≥n de una antolog√≠a
+            exitosa, sea en firme o digital, su elaboraci√≥n demanda del desarrollo de estrategias de lectura y escritura, de an√°lisis, de reflexi√≥n y 
+            de argumentaci√≥n. Por lo que la elaboraci√≥n de una antolog√≠a requiere de un gran esfuerzo intelectual, siempre ser√° un trabajo arduo 
+            a√∫n con experiencia. La lectura y la escritura tienen especificidades en cada campo del conocimiento. No es lo mismo elaborar una antolog√≠a 
+            sobre econom√≠a y otra sobre cultura, sus autores deben desarrollar las habilidades pertinenetes.
         </div>
         <br>
         <div id="titulo">
-            Mi proyecto de antolog&iacute;a digital
+            Mi proyecto de antolog√≠a digital
         </div>
         <div class="parrafo">
-            El tema de la antologÌa digital a elaborar, como un requerimiento del curso, es sobre la contaminaci&oacute;n (poluci&oacute;n) global. Un tema crÌtico y actual. Se espera que con la realizaci&oacute;n del trabajo de investigaciÛn solicitado, los aprendientes tomen conciencia de la herencia que estamos dejando a nuestros decendientes.
+            El tema de la antolog√≠a digital a elaborar, como un requerimiento del curso, es sobre la contaminaci√≥n (poluci√≥n) global. Un tema 
+            cr√≠tico y actual. Se espera que con la realizaci√≥n del trabajo de investigaci√≥n solicitado, los aprendientes tomen conciencia de 
+            la herencia que estamos dejando a nuestros decendientes.
         </div>
     </div>
 </body>
