Más ajustes al css

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
@@ -13,6 +13,11 @@
    html,body{
       height: 100%;
    }
+   .contenido{
+      position: absolute; 
+      width: 95%; 
+      height: 100%;
+   }
 </style>
 <body style="background:white;">
 <div class="row">
@@ -35,7 +40,7 @@
       </div>
    </div>
    <div class="col-sm-9" style="position: relative;  padding-bottom: 50%;">
-      <iframe src="ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html" style="position: absolute; width: 90%; height: 100%; padding:5px" name="iframe_a" frameborder="0" seamless="seamless"></iframe>
+      <iframe src="ITEMS_Biografia_de_Mario_Molina/INTROITO_Biografia_de_Mario_Molina.html" class="contenido" name="iframe_a" frameborder="0" seamless="seamless"></iframe>
    </div>
 </div>
 </body>
