--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/ITEMS_Biografia_de_Mario_Molina/DOCTORADOS_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/ITEMS_Biografia_de_Mario_Molina/DOCTORADOS_Biografia_de_Mario_Molina.html
@@ -5,18 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../../css/contenido.css">
   <script src="../../../js/jquery-3.4.1.min.js"></script>
   <script src="../../../js/bootstrap.min.js"></script>
   <title>Doctorados Honoris Causa</title>
-<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ ESTILO ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
-<style>
-  #section{font-family:Verdana; font-size:12px; font-style:bold; text-align:justify;} 
-  html,body{
-    height: 100%;
-    padding: 10px;
-    }
-  #titulo{font-family: palatino linotype; font-size:18px; padding:2px; width:250px; text-align:left;}
-</style>
 </head>
 
 <body BGColor=white>
