--- a/antologia/PORTADA_Polucion_Global.html
+++ b/antologia/PORTADA_Polucion_Global.html
@@ -8,9 +8,14 @@
   <link rel="stylesheet" href="ITEMS_Polucion_Global/w3.css">
 <style>
 
+html{
+  height: 100%;
+}
+
 body{
-      padding: 0px;
-      margin: 0px;
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
 }
 
 body::-webkit-scrollbar {
@@ -196,8 +201,8 @@ hr {
       <li><a href="PORTADA_Polucion_Global.html" target="top_">A casa</a></li> ]
     </ul>
     </div>
-  <div style="margin-top: 0px; background: white; width: 100%; height: auto;">
-    <iframe src="ITEMS_Polucion_Global/Slideshow_animado.html" name="iframe_z" style="width: 100%; height: 700px; border: none; seamless: seamless"></iframe>
+  <div style="margin-top: 0px; background: white; width: 100%; height: 100%;">
+    <iframe src="ITEMS_Polucion_Global/Slideshow_animado.html" name="iframe_z" style="width: 100%; height: 100%; border: none; seamless: seamless"></iframe>
   </div>
 </body>
 </html>
