Corrijo algunos errores en el estilo

--- a/antologia/PORTADA_Polucion_Global.html
+++ b/antologia/PORTADA_Polucion_Global.html
@@ -85,7 +85,7 @@ a:hover, a:active {
 }
 
 .Titulo {
-	font-family: New Times Roman;
+	font-family: "New Times Roman";
 	font-size: 34px;
 	text-align: center;
 	color: black;
@@ -102,11 +102,11 @@ a:hover, a:active {
 	background-color: blue;
 	font-size:14px;
 	color: white;
-	width: 100%
+  width: 100%;
 	clear: both;
 	text-align: center;
 	padding: 4px;
-	face: New Times Roman;
+	font-family: "New Times Roman";
 	padding: 0px 10px 0px 10px;
 }
 
