Muevo referencias a estilos compartidos

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html
@@ -6,8 +6,8 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>MENU_Biografia_de_Mario_Molina</title>
    <link rel="stylesheet" href="../../css/bootstrap-grid.css">
-   <link rel="stylesheet" href="ITEMS_Biografia_de_Mario_Molina/w3.css">
-   <link rel="stylesheet" href="ITEMS_Biografia_de_Mario_Molina/nav.css">
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 <style>
    html,body{
