Muevo las referencias a estilos restantes

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Actividad_Solar/MENU_Actividad_Solar.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Actividad_Solar/MENU_Actividad_Solar.html
@@ -2,8 +2,8 @@
 <html>
 <head>
    <title>MENU_Actividad_Solar</title>
-   <link rel="stylesheet" href="ITEMS_Actividad_Solar/w3.css">
-   <link rel="stylesheet" href="ITEMS_Actividad_Solar/nav.css">
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 
 <body bgcolor="white">
@@ -12,7 +12,7 @@
    
       <div id="nav">
          <div class="nav_titulo">
-            Actividad solar cada 11 años
+            Actividad solar cada 11 aï¿½os
          </div>
          <ul id="nav_menu">
             <li><a href="CONTENIDO_Actividad_Solar/VC5_Int_Sup.pdf" target="iframe_a">Manchas solares</a></li>
@@ -24,13 +24,13 @@
             <li><a href="#" target="iframe_a">Texto 7</a></li>
             <br>
             <div class="nav_titulo">
-               Radiación UV procedente del sol
+               Radiaciï¿½n UV procedente del sol
             </div>
-            <li><a href="#" target="iframe_a">Tipos de radiación UV</a></li>
-            <li><a href="#" target="iframe_a">Efectos de la radiación UV</a></li>
-            <li><a href="#" target="iframe_a">Radiación UV en la Ciudad de México</a></li>
-            <li><a href="#" target="iframe_a">Aplicaciones industriales de la radiación UV</a></li>
-            <li><a href="#" target="iframe_a">Cuando es nociva y cuando benefica la radiación UV</a></li>
+            <li><a href="#" target="iframe_a">Tipos de radiaciï¿½n UV</a></li>
+            <li><a href="#" target="iframe_a">Efectos de la radiaciï¿½n UV</a></li>
+            <li><a href="#" target="iframe_a">Radiaciï¿½n UV en la Ciudad de Mï¿½xico</a></li>
+            <li><a href="#" target="iframe_a">Aplicaciones industriales de la radiaciï¿½n UV</a></li>
+            <li><a href="#" target="iframe_a">Cuando es nociva y cuando benefica la radiaciï¿½n UV</a></li>
           </ul>
       </div>
    </div>
