--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cambio_Climatico/MENU_Cambio_Climatico.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cambio_Climatico/MENU_Cambio_Climatico.html
@@ -2,15 +2,15 @@
 <html>
 <head>
    <title>MENU_Cambio_Climatico</title>
-   <link rel="stylesheet" href="ITEMS_Cambio_Climatico/w3.css">
-   <link rel="stylesheet" href="ITEMS_Cambio_Climatico/nav.css">
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 
 <body bgcolor="white">
 <div class="w3-row w3-border">
    <div class="w3-container w3-quarter" style="background: white">
       <div id="nav">
-         <div class="nav_titulo">Cambio climático (aumento global de la temperatura, tormentas, etc.)</div>
+         <div class="nav_titulo">Cambio climï¿½tico (aumento global de la temperatura, tormentas, etc.)</div>
          <ul id="nav_menu">
             <li><a href="#" target="iframe_a">Texto 1</a></li>
             <li><a href="#" target="iframe_a">Texto 2</a></li>
