--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conflicto_por_agua_Mexico_EUA/MENU_Conflicto_por_agua_Mexico_EUA.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conflicto_por_agua_Mexico_EUA/MENU_Conflicto_por_agua_Mexico_EUA.html
@@ -2,14 +2,14 @@
 <html>
 <head>
    <title>MENU_Conflicto_por_agua_Mexico_EUA</title>
-  <link rel="stylesheet" href="ITEMS_Conflicto_por_agua_Mexico_EUA/w3.css">
-  <link rel="stylesheet" href="ITEMS_Conflicto_por_agua_Mexico_EUA/nav.css">
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 <body bgcolor="white">
 <div class="w3-row w3-border">
    <div class="w3-container w3-quarter">
       <div id="nav">
-         <div class="nav_titulo">Conflicto entre México y E. U. A. por el agua</div>
+         <div class="nav_titulo">Conflicto entre Mï¿½xico y E. U. A. por el agua</div>
          <ul id="nav_menu">
             <li><a href="#" target="iframe_a">Texto 1</a></li>
             <li><a href="#" target="iframe_a">Texto 2</a></li>
