--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cuerpos_de_Agua/MENU_Cuerpos_de_Agua.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cuerpos_de_Agua/MENU_Cuerpos_de_Agua.html
@@ -2,15 +2,15 @@
 <html>
 <head>
    <title>MENU_Cuerpos_de_Agua</title>
-   <link rel="stylesheet" href="ITEMS_Cuerpos_de_Agua/w3.css">
-   <link rel="stylesheet" href="ITEMS_Cuerpos_de_Agua/nav.css">
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 <body bgcolor="white">
 <div class="w3-row w3-border">
    <div class="w3-container w3-quarter" style="background: white">
       <div id="nav">
          <div class="nav_titulo">
-            Contaminación en océanos, ríos, lagos, etc.
+            Contaminaciï¿½n en ocï¿½anos, rï¿½os, lagos, etc.
          </div>
             <ul id="nav_menu">
                <li><a href="#" target="iframe_a">Texto 1</a></li>
