--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Especies_en_Extincion/MENU_Especies_en_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Especies_en_Extincion/MENU_Especies_en_Extincion.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
-   <title>MENU_Especies_en_Extinción</title>
-   <link rel="stylesheet" href="ITEMS_Especies_en_Extincion/w3.css">
-   <link rel="stylesheet" href="ITEMS_Especies_en_Extincion/nav.css">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>MENU_Especies_en_ExtinciÃ³n</title>
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 <body bgcolor="white">
 <div class="w3-row w3-border">
@@ -26,7 +29,7 @@
             <br>
             
             <div class="nav_titulo">
-               México: Extinción de la vaquita marina y otros
+               MÃ©xico: ExtinciÃ³n de la vaquita marina y otros
             </div>
             
             <li><a href="#" target="iframe_a">Texto 10</a></li>
