--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Suelos/MENU_Suelos.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Suelos/MENU_Suelos.html
@@ -2,15 +2,15 @@
 <html>
 <head>
    <title>MENU_Suelos</title>
-   <link rel="stylesheet" href="ITEMS_Suelos/w3.css">
-   <link rel="stylesheet" href="ITEMS_Suelos/nav.css">
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 <body bgcolor="white">
 <div class="w3-row w3-border">
    <div class="w3-container w3-quarter">
       <div id="nav">
          <div class="nav_titulo">
-            Contaminación de suelos (químicos, materia orgánica e inorgánica, minería, otros)
+            Contaminaciï¿½n de suelos (quï¿½micos, materia orgï¿½nica e inorgï¿½nica, minerï¿½a, otros)
          </div>
          <ul id="nav_menu">
             <li><a href="#" target="iframe_a">Texto 1</a></li>
