--- a/antologia/ITEMS_Polucion_Global/Slideshow_animado.html
+++ b/antologia/ITEMS_Polucion_Global/Slideshow_animado.html
@@ -1,8 +1,12 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
-      <link rel="stylesheet" href="ESTILOS/w3.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../css/w3.css">
+    <link rel="stylesheet" href="../css/nav.css">
+</head>
 <script>
   function showSlides() {
     var i;
