--- a/antologia/PORTADA_Polucion_Global.html
+++ b/antologia/PORTADA_Polucion_Global.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Portada_Polucion_Global</title>
-  <link rel="stylesheet" href="ITEMS_Polucion_Global/w3.css">
+  <link rel="stylesheet" href="css/w3.css">
 <style>
 
 html{
